fix email wrap

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -101,7 +101,7 @@ body {
     @apply px-6 py-3 bg-gray-50 text-left text-xs font-medium text-gray-500 uppercase tracking-wider;
   }
   .admin-table td {
-    @apply px-6 py-4 whitespace-nowrap text-sm text-gray-900;
+    @apply px-6 py-4 whitespace text-sm text-gray-900;
   }
 }
 
